<resources>
    <string name="app_name">PrimePay</string>
    <string name="card_transfer">Card Transfer</string>
    <string name="cash_in">Cash In</string>
    <string name="change_lang">Change Language To Arabic</string>
    <string name="logout">Logout</string>
    <string name="ntest">Network Test</string>
    <string name="reports">Reports</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings Related To Trnsactions -->
    <string name="payment_method_prompt">Preferred Payment Method</string>
    <string-array name="payment_method">
        <item>Credit Card</item>
        <item>Mobile Wallet</item>
    </string-array>

    <!-- Strings Related To Mobile Services -->
    <string name="moblie_providers_prompt">Mobile Services Providers</string>
    <string-array name="mobile_providers">
        <item>Sudani</item>
        <item>Zain</item>
        <item>MTN</item>
    </string-array>
    <!--    strings related to E15 services-->
    <string name="services_providers_prompt">E15 Services Providers</string>
    <string-array name="services_providers">
        <item>Bill Inquiry</item>
        <item>Payment</item>
    </string-array>
    <!--    strings related to MOHE-->
    <string name="moheType">MOHE Type</string>
    <string-array name="mohe_types">
        <item>Sudanese MOHE</item>
        <item>Arab MOHE</item>
    </string-array>

    <string name="courseId">Course ID</string>
    <string-array name="course_id">
        <item>Academic</item>
        <item>Agricultural</item>
        <item>commercial</item>
        <item>Industrial</item>
        <item>Womanly</item>
        <item>Ahlia</item>
        <item>Readings</item>
    </string-array>

    <string name="formKind">Form Kind</string>
    <string-array name="form_kind">
        <item>General admission-first round</item>
        <item>Special admission</item>
        <item>Sons of higher education staff</item>
        <item>General admission-second round</item>
        <item>Special admission-vacant seats</item>
        <item>Private institutions direct admission</item>
        <item>Diploma in public institutions</item>
    </string-array>
    <!-- Custom Keyboard String -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="abc">ABC</string>
    <string name="def">DEF</string>
    <string name="ghi">GHI</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqrs">PQRS</string>
    <string name="tuv">TUV</string>
    <string name="wxyz">WXYZ</string>
    <string name="need">We need to text you a</string>
    <string name="code">confirmation code to get started.</string>
    <string name="awsm">Awesome, Thanks!</string>
    <string name="sent">We have sent a confirmation code.</string>
    <string name="soon">You should get it soon.</string>
    <string name="why">why?</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="verify">VERIFY</string>
    <string name="resend">RESEND</string>
    <string name="sd">+249</string>
    <!--electric activity-->
    <string name="emptyAmt">Amount Cannot Be Empty</string>
    <string name="meterNoLength">Invalid Meter Number</string>
    <string name="meter">Meter Number</string>
    <string name="cmeter">Confirm Meter Number</string>
    <string name="electric">Electric</string>
    <string name="payment_options">Payment Options</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="page_logo">page logo</string>
    <string name="amount">Amount</string>
    <string name="reciver_card_number">Reciver card number</string>
    <string name="back_amount">Back Amount</string>
    <string name="custom">Custom</string>
    <string name="e15">E15</string>
    <string name="mobile_services">Mobile Services</string>
    <string name="purchases">Operations</string>
    <string name="mohe">MOHE</string>
    <string name="bill_payments">Bill Payments</string>
    <string name="government">Government Services</string>
    <string name="purchase">Purchase</string>
    <string name="top_up">Top up</string>
    <string name="telecom_company">Telecom Company</string>
    <string name="phone_number">Phone Number</string>
    <string name="cash_back">Purchase with cash back</string>
    <string name="cardpay">Card Pay</string>

    <!--forms test-->
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_amount">Invalid Amount</string>
    <string name="err_reciveCardNumber">Invalid card Number</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="swipe_card">Please swipe your card</string>
    <string name="todo">TODO</string>
    <string name="validate">Proceed</string>
    <string name="err_phone_number">Invalid Phone Number</string>
    <string name="hint_phone_number">Enter your number without (0)</string>
    <string name="err_meter_number">Invaild Meter Number</string>
    <string name="err_pin">invaild pin</string>
    <string name="ServiceID">Service ID</string>
    <string name="services_prompt">services</string>
    <string name="invoice">Invoice Number</string>
    <string name="err_invoice_number">Invaild Invoice Number</string>
    <string name="bankCode">Bank Code</string>
    <string name="declarantCode">Declarant Code</string>
    <string name="err_bank_code">Bank Code</string>
    <string name="err_declarant_code">Declarant Code</string>
    <string name="seatNumber">Student Seat Number</string>
    <string name="err_seat_number">Invaild Seat Number</string>
    <string name="moheArab">MOHE Arab</string>
    <string name="fullName">Full Name</string>
    <string name="err_full_name">Invaild Full Name</string>
    <string name="mohelist">mohe List</string>
    <string name="loading">Load</string>
    <string name="err_username">Invaild username</string>

    <!--error msgs-->
</resources>
