<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".E15">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar10"
            app:title="@string/e15"
            app:titleTextColor="#F9F9F9"/>
    <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="81dp"
                        android:src="@drawable/tax"
                        tools:srcCompat="@drawable/tax"
                        android:contentDescription="@string/page_logo"
                        android:padding="15dp"/>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="5dp"
                    card_view:cardElevation="9dp"
                    android:layout_marginRight="20dp"

                    android:background="@drawable/round_border">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" android:padding="15dp">

                    <TextView
                            android:text="@string/ServiceID"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="@style/TextAppearance.Medium.Bold" android:textAlignment="center"
                            android:textColor="@android:color/black"/>

                    <Spinner
                            android:id="@+id/serviceMethodSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_gravity="center"
                            android:entries="@array/services_providers"
                            android:prompt="@string/services_prompt"
                            android:spinnerMode="dropdown" />

                    <TextView
                            android:text="@string/invoice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView12"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false"
                            android:id="@+id/invoiceLayoutE15">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/invoiceE15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/amount"
                                android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                            android:text="@string/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView9"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAlignment="center"/>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false"
                            android:id="@+id/phoneNumberLayoutE15">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phoneNumberE15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_phone_number"
                                android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_middle"
                            android:text="@string/payment_options"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_90"
                            android:textStyle="bold"/>

                    <Spinner
                            android:id="@+id/paymentMethodSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_gravity="center"
                            android:entries="@array/payment_method"
                            android:prompt="@string/payment_method_prompt"/>

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/proceed"
                            android:textAllCaps="false"
                            android:layout_marginTop="30dp"
                            android:textColor="#ffffff"
                            android:padding="15dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded_button"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:id="@+id/proceedE15"/>

                    <Button
                            android:id="@+id/backButtonE15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/back"
                            android:padding="15dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded_button2"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="20dp"
                            />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
