<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".CardPay">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar11" app:title="@string/cardpay"
            app:titleTextColor="#F9F9F9"/>
    <TextView
            android:text="@string/swipe_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView14" android:textAlignment="center"
            android:textColor="@android:color/black" android:textSize="30sp" android:textStyle="bold"
            android:padding="20dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="20dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="286dp" card_view:srcCompat="@drawable/cardswipe"
                android:id="@+id/imageView3" android:contentDescription="@string/todo" android:padding="30dp"
                app:srcCompat="@drawable/swipecard"/>
    </androidx.cardview.widget.CardView>

    <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:padding="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
    />
</LinearLayout>